fixed overflow

--- a/style/contact.css
+++ b/style/contact.css
@@ -1,5 +1,5 @@
 .contact {
-  background: url("/images/landing/backgroundTwo.png") no-repeat center
+  background: url("/images/landing/backgroundOne.png") no-repeat center
     center/cover;
   height: 1000px;
 }
@@ -8,11 +8,14 @@
   color: #212121;
   font-family: Nagoda;
   font-size: 26px;
-  text-align: right;
+  text-align: left;
 }
 
 @media only screen and (min-width: 600px) {
   .contact h2 {
-    font-size: 31px;
+    font-size: 56px;
+    width: 80%;
+    line-height: 56px;
+    margin: auto;
   }
 }
