--- a/style/container.css
+++ b/style/container.css
@@ -16,14 +16,3 @@ section {
   height: 100vh;
   background: url("/animation/animationTest.mp4") no-repeat center center/cover;
 }
-
-.contact {
-  background-color: rgb(15, 46, 46);
-  /* test */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  height: 100vh;
-}
