--- a/style/footer.css
+++ b/style/footer.css
@@ -26,8 +26,14 @@
   margin-bottom: 38px;
 }
 
+.footer h3 {
+  color: var(--heading-color);
+  font-family: Nagoda;
+}
+
 .footer p {
   font-family: "Syne", sans-serif;
+  color: var(--paragraph-color);
 }
 
 @media only screen and (min-width: 600px) {
