--- a/style/initiative.css
+++ b/style/initiative.css
@@ -62,7 +62,7 @@
 @media only screen and (min-width: 600px) {
   .initiative {
     background-color: #212121;
-    height: 1400px;
+    height: 1200px;
   }
 
   .initiative h2 {
